# ai-sdk-cpp

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  DEVELOPMENT.md  LICENSE  README.md  vcpkg.json
.cursor/rules/: ai_docs.mdc  cpp.mdc  run-scripts.mdc
.github/workflows/: ci.yml
cmake/: ai-sdk-cpp-config.cmake.in
cmake/dependencies/: brotli.cmake  concurrentqueue.cmake  googletest.cmake  httplib.cmake  nlohmann_json.cmake  openssl.cmake  zlib.cmake
contrib/pg_gen_query/: CMakeLists.txt  README.md  docker-compose.yml  pg_gen_query--1.0.sql  pg_gen_query.control  pg_gen_query.cpp  register_function.sql
examples/: CMakeLists.txt  basic_chat.cpp  embeddings_example.cpp  error_handling.cpp  multi_provider.cpp  openrouter_example.cpp  retry_config_example.cpp  streaming_chat.cpp  test_anthropic.cpp  test_openai.cpp  test_tool_integration.cpp  tool_calling_async.cpp  tool_calling_basic.cpp  tool_calling_multistep.cpp
examples/components/all/: CMakeLists.txt  main.cpp
examples/components/anthropic/: CMakeLists.txt  main.cpp
examples/components/openai/: CMakeLists.txt  main.cpp
examples/pg_gen_ai/: CMakeLists.txt  GETTING_STARTED.md  README.md
examples/pg_gen_ai/docs/: CACHING.md  QUICKSTART.md
examples/pg_gen_ai/sql/: ai_gen_via_worker.sql  cache_schema.sql
examples/pg_gen_ai/src/: ai_worker.cpp  pg_cache.cpp  pg_cache.h
examples/pg_gen_ai/systemd/: ai_worker.service
include/ai/: ai.h  anthropic.h  core.h  errors.h  gemini.h  generate.h  logger.h  openai.h  stream.h  tools.h
include/ai/retry/: retry_error.h  retry_policy.h
include/ai/types/: client.h  embeddding_options.h  embedding_options.h  enums.h  generate_options.h  message.h  model.h  stream_event.h  stream_options.h  stream_result.h  tool.h  usage.h
scripts/: build.py  format.py  lint.py
src/http/: http_request_handler.cpp  http_request_handler.h
src/providers/: anthropic_client.cpp  base_provider_client.cpp  base_provider_client.h  openai_client.cpp
src/providers/anthropic/: anthropic_client.cpp  anthropic_client.h  anthropic_factory.cpp  anthropic_factory.h  anthropic_request_builder.cpp  anthropic_request_builder.h  anthropic_response_parser.cpp  anthropic_response_parser.h  anthropic_stream.cpp  anthropic_stream.h
src/providers/gemini/: gemini_client.cpp  gemini_client.h  gemini_factory.cpp  gemini_factory.h  gemini_request_builder.cpp  gemini_request_builder.h  gemini_response_parser.cpp  gemini_response_parser.h
src/providers/openai/: openai_client.cpp  openai_client.h  openai_factory.cpp  openai_factory.h  openai_request_builder.cpp  openai_request_builder.h  openai_response_parser.cpp  openai_response_parser.h  openai_stream.cpp  openai_stream.h
src/tools/: multi_step_coordinator.cpp  tool_executor.cpp
src/types/: embedding_options.cpp  message.cpp  stream_options.cpp  stream_result.cpp
src/utils/: message_utils.h  response_utils.h
test-services/clickhouse/: docker-compose.yaml
tests/: CMakeLists.txt  README.md
tests/integration/: anthropic_integration_test.cpp  clickhouse_integration_test.cpp  mock_server_test.cpp  multi_step_duplicate_execution_test.cpp  openai_embeddings_integration_test.cpp  openai_integration_test.cpp  tool_calling_integration_test.cpp
tests/performance/: memory_test.cpp  throughput_test.cpp
tests/unit/: anthropic_client_test.cpp  anthropic_stream_test.cpp  openai_client_test.cpp  openai_embeddings_test.cpp  openai_stream_test.cpp  types_test.cpp
tests/utils/: mock_anthropic_client.cpp  mock_anthropic_client.h  mock_http_server.cpp  mock_http_server.h  mock_openai_client.cpp  mock_openai_client.h  test_fixtures.cpp  test_fixtures.h
tools/: test_gemini_client.cpp
